syntax = "proto3";

package gencar.v1;

option go_package = "github.com/web3eye-io/Web3Eye/proto/web3eye/gencar/v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "web3eye/web3eye.proto";

service Manager {
  rpc Version(google.protobuf.Empty) returns (web3eye.VersionResponse) {
    option (google.api.http) = {
      post : "/v1/version"
      body : "*"
    };
  }

  rpc ReportFile(ReportFileRequest) returns (ReportFileResponse) {
    option (google.api.http) = {
      post : "/v1/report/file"
      body : "*"
    };
  }
}

message ReportFileRequest{
  uint32 ID = 10;
  string S3Key = 20;
}

message ReportFileResponse{
  uint32 ID = 10;
  string S3Key = 20;
}